packages/go/include/xberg.h

/**
 * Return the last error code (0 means no error).
 * # Safety
 * Caller must ensure all pointer arguments are valid or null.
 * This function does not allocate and returns no owned pointer.
 */
int32_t xberg_last_error_code(void);
/**
 * Return the last error message. The pointer is borrowed and valid until the
 * next FFI call on this thread. # Safety Caller must ensure all pointer
 * arguments are valid or null. The returned pointer is borrowed from
 * thread-local storage and must NOT be freed.
 */
const char *xberg_last_error_context(void);
/**
 * Free a string previously returned by this library.
 * # Safety
 * Pointer must have been returned by this library, or be null.
 */
void xberg_free_string(char *ptr);