packages/crystal/src/xberg.cr

require "json"

# Low-level binding to the generated C FFI layer (xberg.h).
#
# Every non-scalar value crosses the C ABI as a NUL-terminated JSON string
# (`LibC::Char*`); scalars pass by value. Strings returned by the library are
# owned by Rust and must be released with `xberg_free_string`.
#
# Link against the FFI shared library. The library must be installed to a
# standard path, or you can pass --link-flags at build time:
#   crystal build ... --link-flags="-L/path/to/lib -Wl,-rpath,/path/to/lib"
@[Link(ldflags: "-lxberg_ffi")]
lib LibXberg
  fun free_string = xberg_free_string(ptr : LibC::Char*) : Void
  fun last_error_code = xberg_last_error_code() : Int32
  fun last_error_context = xberg_last_error_context() : LibC::Char*
